src/tests/testfiles/binary-operator-types-7.txt
Error at 2:7: Comparison operator operands need to be of same type (have int rvalue and float rvalue)
5 >= 6.0;
  ^
